# TruAPI

./: .editorconfig  .flake8  .gitignore  Dockerfile  Makefile  mkdocs.yml  pyproject.toml
.do/: app.yaml
docs/: APP_PLATFORM.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  index.md  todo.md
docs/developer/: api-reference.md  architecture.md  authentication.md  authorization-quick-start.md  core-auth-usage.md  core-authorization.md  cross-context-references.md  environment-setup.md  groups-and-permissions.md  hexagonal-architecture.md  ide-setup.md  index.md  providers-quickref.md  providers.md  settings-architecture.md
docs/js/: mermaid-init.js
docs/reference/: core.md  index.md  openapi-users.json  openapi_users_gen.py  users.md
docs/truapi/: index.md
tests/: test_main.py  test_repositories.py  test_settings.py  test_user_repository.py  test_users.py
truapi/: __init__.py  settings.py
truapi/adapters/repositories/settings/: in_memory.py
truapi/adapters/repositories/user/: in_memory.py  sqlalchemy.py
truapi/core/: settings.py
truapi/core/authn/: exceptions.py
truapi/domain/entities/: settings.py  user.py
truapi/domain/value_objects/: id.py
truapi/drivers/rest/: dependencies.py  exception_handlers.py  main.py
truapi/ports/repositories/: settings.py  user.py
truapi/shared/db/: settings.py
truapi/use_cases/: exceptions.py
truapi/use_cases/settings/: get.py  set.py
truapi/use_cases/user/: create.py  create_test.py  delete.py  delete_test.py  get.py  get_test.py  update.py  update_test.py
truapi/users/: __init__.py  models.py  services.py
(+1 files in other folders)
